--- a/client/app/assets/styles/_variables.scss
+++ b/client/app/assets/styles/_variables.scss
@@ -1,5 +1,5 @@
 $default-font: 'Noto Sans JP', sans-serif;
 $light_gray: rgba(198, 198, 198, 0.58);
 $gray: #a4a4a4;
-$red: #cd3a42;
+$red: #f4003f;
 $gutter40: 35px;
