--- a/client/app/components/ui/Field/Field.module.scss
+++ b/client/app/components/ui/Field/Field.module.scss
@@ -1,10 +1,10 @@
 $gray: #797979;
 
 .input {
-	@apply relative block;
+	@apply relative block mb-4;
 
 	> input {
-		@apply py-2 w-full border-b;
+		@apply pb-2 w-full border-b;
 	}
 
 	&::placeholder {
@@ -13,5 +13,6 @@ $gray: #797979;
 }
 
 .error {
-	@apply absolute -bottom-6 left-0 text-sm w-full text-primary;
+	@apply absolute -bottom-3 left-0 w-full text-primary;
+	font-size: 0.5rem;
 }
