--- a/client/app/components/ui/Button/Button.module.scss
+++ b/client/app/components/ui/Button/Button.module.scss
@@ -1,3 +1,3 @@
 .button {
-	@apply py-2 px-4 text-white bg-primary rounded-md;
+	@apply py-2 px-4 text-white bg-primary bg-opacity-80 rounded-md transition-colors duration-300 hover:bg-opacity-100;
 }
