--- a/client/app/components/layout/header/auth-form/AuthForm.module.scss
+++ b/client/app/components/layout/header/auth-form/AuthForm.module.scss
@@ -2,7 +2,7 @@
 	@apply relative inline-flex;
 
 	.form {
-		@apply block shadow-lg p-4 absolute right-2 animate-scaleIn w-44 z-20 bg-white rounded-md;
+		@apply block shadow-lg p-4 absolute right-2 animate-scaleIn w-44 z-20 bg-white;
 		top: calc(100% + 1.4rem);
 
 		.registerBtn {
