--- a/client/app/assets/styles/_variables.scss
+++ b/client/app/assets/styles/_variables.scss
@@ -1,4 +1,4 @@
-$default-font: 'Noto Sans JP', sans-serif;
+$default-font: 'Open Sans', sans-serif;
 $light_gray: rgba(198, 198, 198, 0.58);
 $gray: #a4a4a4;
 $red: #f4003f;
