--- a/client/app/assets/styles/old-styles.scss
+++ b/client/app/assets/styles/old-styles.scss
@@ -61,29 +61,27 @@ img {
 	max-width: 100%;
 	height: auto;
 }
-// Start 21:13
 
 #youtube_main {
 	display: flex;
 	flex-wrap: wrap;
 	.sidebar {
-		width: 18%;
-		padding: 25px;
+		width: 15%;
+		padding: 20px 0;
 		background-color: #f8f8f8;
 		> .logo {
 			display: block;
-			margin-bottom: 40px;
-			img {
-				max-width: 130px;
-			}
+			margin-bottom: 30px;
+			margin-left: 12px;
 		}
 
 		.line,
 		.line_mnu {
-			margin: 40px auto;
+			margin: 32px auto;
 			height: 1px;
 			background-color: $gray;
 			opacity: 0.4;
+			width: calc(100% - 40px);
 		}
 		> .mnu_sidebar {
 			list-style-type: none;
@@ -101,13 +99,14 @@ img {
 					display: -o-flex;
 					display: flex;
 					align-items: center;
-					font-size: 14px;
+					font-size: 16px;
 					color: #111;
 					font-weight: 500;
 					position: relative;
+					padding: 0 25px;
 					> img {
 						margin-right: 20px;
-						max-width: 20px;
+						max-width: 28px;
 						height: auto;
 						display: block;
 					}
@@ -138,19 +137,20 @@ img {
 
 		#logout_btn {
 			text-decoration: none;
-			font-size: 14px;
+			font-size: 18px;
 			font-weight: 500;
 			color: #111;
-			margin-bottom: 50px;
+			margin-bottom: 40px;
 			display: block;
+			margin-left: 20px;
 		}
 		.copy {
-			font-size: 14px;
 			color: $gray;
+			margin-left: 20px;
 		}
 	}
 	.content {
-		width: 82%;
+		width: 85%;
 		&.content-full {
 			width: 100%;
 		}
@@ -184,7 +184,7 @@ img {
 						position: absolute;
 						right: 15px;
 						top: 8px;
-						max-width: 15px;
+						max-width: 20px;
 					}
 				}
 			}
@@ -214,27 +214,15 @@ img {
 						padding-right: 15px;
 						> .sub_name {
 							font-size: 18px;
-							font-weight: 500;
 						}
 						> h1 {
 							font-size: 24px;
-							margin: 30px 0 20px;
+							margin: 20px 0;
+							font-weight: 600;
 						}
 						> .description {
 							color: $gray;
-							font-size: 12px;
 							margin-bottom: 20px;
-						}
-						> .slider_wf {
-							.video_item {
-								// padding: 0 10px;
-								> .number_info {
-									justify-content: space-between;
-									> div {
-										margin: 0;
-									}
-								}
-							}
 						}
 					}
 					> .top_video {
@@ -255,12 +243,8 @@ img {
 	display: flex;
 	align-items: center;
 	> h2 {
-		font-size: 18px;
-		margin-right: 20px;
-	}
-	> .showmore {
-		color: $gray;
-		cursor: pointer;
+		font-size: 20px;
+		margin-right: 15px;
 	}
 }
 #wrapper_content {
@@ -276,7 +260,6 @@ img {
 				justify-content: space-between;
 				margin-bottom: 25px;
 				> .sort {
-					font-size: 12px;
 					font-weight: 500;
 				}
 			}
@@ -295,36 +278,6 @@ img {
 				> .video_big_item {
 					width: 46%;
 					position: relative;
-					&::after {
-						content: '';
-						width: 100%;
-						height: 100%;
-						background-color: $red;
-						opacity: 0.9;
-						position: absolute;
-						top: 0;
-						right: 0;
-					}
-					&::before {
-						content: 'Friends Together';
-						width: 100%;
-						height: 100%;
-						z-index: 2;
-						position: absolute;
-						top: 0;
-						right: 0;
-						color: #fff;
-						font-size: 18px;
-						font-weight: 600;
-						padding-left: 30px;
-						display: -webkit-flex;
-						display: -moz-flex;
-						display: -ms-flex;
-						display: -o-flex;
-						display: flex;
-						align-items: center;
-						justify-content: flex-start;
-					}
 				}
 			}
 		}
@@ -333,26 +286,23 @@ img {
 		width: 25%;
 		padding: $gutter40;
 		position: relative;
-		.showmore {
-			font-size: 12px;
-		}
+
 		.video_live_item {
-			margin-top: 25px;
+			margin-top: 20px;
 		}
 		.line {
 			background-color: $light_gray;
 			height: 1px;
 			width: 100%;
-			margin: 30px 0;
+			margin: 25px 0;
 		}
 		#top_channels {
-			margin-bottom: 100px;
 			.title_gray {
-				margin-bottom: 20px;
+				margin-bottom: 15px;
 			}
 			.list_channels {
 				> .channel {
-					margin-bottom: 20px;
+					margin-bottom: 15px;
 					display: flex;
 					align-items: center;
 					justify-content: space-between;
@@ -361,24 +311,26 @@ img {
 						align-items: center;
 						> img {
 							margin-right: 15px;
-							width: 35px;
-							height: 35px;
+							width: 70px;
+							height: 70px;
 							border-radius: 50%;
 						}
 						> .info {
 							> .name {
 								position: relative;
-								font-weight: 500;
+								font-weight: 600;
+								font-size: 1.2rem;
 								&::after {
 									content: '';
-									width: 10px;
-									height: 10px;
+									width: 15px;
+									height: 15px;
 									background-image: url('/img/common/correct.svg');
 									background-position: center;
 									background-repeat: no-repeat;
-									margin-left: 15px;
+									margin-left: 10px;
 									display: inline-block;
 									background-size: cover;
+									opacity: 0.8;
 								}
 							}
 							> .subs {
@@ -389,29 +341,10 @@ img {
 					> .mnu {
 						text-decoration: none;
 						> img {
-							max-width: 10px;
+							max-width: 20px;
 						}
 					}
 				}
-			}
-		}
-		#youtube_music {
-			position: absolute;
-			width: 100%;
-			left: 0;
-			bottom: 0;
-			> a {
-				text-decoration: none;
-				background-color: #fff;
-				display: block;
-				font-weight: 700;
-				font-size: 18px;
-				padding: 10px 15px;
-				color: #000;
-				position: absolute;
-				left: 35px;
-				bottom: 35px;
-				letter-spacing: -0.8px;
 			}
 		}
 	}
